# substrate-multisig-reference

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  INSTALLATION.md  Kusama reference.ipynb  README.md  Substrate reference.ipynb  build.sh  mnemonic.py  requirements.txt  settings.py  test_multi.sh
bindings/: Cargo.toml  README.md  build.sh
bindings/bip39/: Cargo.toml
bindings/bip39/src/: lib.rs
bindings/sr25519/: Cargo.toml
bindings/sr25519/src/: lib.rs
bindings/src/: lib.rs
bindings/util-multisig/: Cargo.toml
bindings/util-multisig/src/: lib.rs  tests.rs
helpers/: keys.py
js-examples/: .env.local  README.md  approve_as_multi.js  buyer_cancels.js  config.js  funds_back_to_seller.js  funds_dispute_to_buyer.js  index.js  package-lock.json  package.json  standard_trade.js  test_transfer.js
js-examples/ksmref/: core.js  index.js  utils.js
js-examples/tests/: buyer_favor_dispute.test.js  cancellation_trade.test.js  standard_trade.test.js  utils.test.js
js_scripts/: mnemonic_derivation.js
ksmref/: utils.py
scripts/: create_multisig_address.py
tests/: test_balance_check.py  test_broadcast.py  test_escrow_address_creation.py  test_extrinsic_fees.py  test_fund_address.py  test_historical_event_query.py  test_local_sanity.py  test_mnemonic_derivation.py  test_multisig_transactions.py  test_signing.py  test_substrate_rpc.py  test_trade_transactions.py  test_transaction_construction.py
