[package]
name = "util-multisig"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

# full crypto
blake2-rfc = { version = "0.2.18", default-features = false, optional = true }

[lib]
name = "multisig"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[features]
default = ["std"]
std = [
	"blake2-rfc/std",
]

# This feature enables all crypto primitives for `no_std` builds like microcontrollers
# or Intel SGX.
# For the regular wasm runtime builds this should not be used.
full_crypto = [
	"blake2-rfc",
]
